[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pipe.gd" type="Script" id=1]
[ext_resource path="res://assets/pipe.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58, 360 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 109.722 )

[node name="pipe" type="Node2D"]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.44835, 0 )
scale = Vector2( 6.3938, 1 )

[node name="top_pipe" type="KinematicBody2D" parent="."]
position = Vector2( 0, -360 )
collision_layer = 2

[node name="top_collision" type="CollisionShape2D" parent="top_pipe"]
shape = SubResource( 1 )

[node name="pipe_sprite" type="Sprite" parent="top_pipe"]
texture = ExtResource( 2 )

[node name="bottom_pipe" type="KinematicBody2D" parent="."]
position = Vector2( 0, 360 )
collision_layer = 2

[node name="bottom_pipe_sprite" type="Sprite" parent="bottom_pipe"]
texture = ExtResource( 2 )

[node name="bottom_collision" type="CollisionShape2D" parent="bottom_pipe"]
shape = SubResource( 2 )

[node name="score_trigger" type="Area2D" parent="."]
collision_layer = 4

[node name="trigger_shape" type="CollisionShape2D" parent="score_trigger"]
position = Vector2( 65.8443, -0.975342 )
shape = SubResource( 3 )
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="body_entered" from="score_trigger" to="." method="_on_score_trigger_entered"]
